# poolgen

./: Cargo.toml  README.md
src/: main.rs
src/base/: helpers.rs  mod.rs  phen.rs  pileup.rs  structs_and_traits.rs  sync.rs  vcf.rs
src/gp/: cv.rs  mod.rs  penalise.rs
src/popgen/: mod.rs
src/python/: extract_snps_from_gff.py  plot_manhattan.py  plot_qq.py  remove_insig_snps.py
